# xyzTrickGview2

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.ini
.github/workflows/: workflow.yml
docs/: .gitignore  Makefile  build.sh  pandoc.yaml  preamble.tex  xyzTrick_Software_Manual_zh.md
inno_setup/: xyzclip.iss
new_idea/: ChargefakeG.sh  chg_diff.cpp  chg_viewer.cpp  clip_chem3d.cpp  clipchem3d_silent.cpp  clipxtb.cpp  compile.sh  cp2k2xyz.cpp  smiles_to_gaussian.py  xyz2file.cpp  xyz2gau.py
plugins/: clipxtb.cpp
resources/: xyz_monitor.rc
src/: config.cpp  config.h  converter.cpp  converter.h  core.cpp  core.h  encoding.cpp  encoding.h  logfile_handler.cpp  logfile_handler.h  logger.cpp  logger.h  main.cpp  menu.cpp  menu.h  version.h
